# stock-mcp

./: .env.example  .gitignore  README.md  README_SMITHERY.md  SMITHERY_DEPLOYMENT_FIX.md  TOOLS_VERIFICATION_REPORT.md  architecture_refactor_v2.md  edgar_rag.md  pyproject.toml  requirements.txt  start_smithery.py  start_stock_mcp_stdio.sh  test_server.py  test_structure.py
scripts/: mcp2openapi.py  test_mcp_http.py
server/: app.py
server/api/: __init__.py
server/api/models/: __init__.py
server/api/routes/: filings.py  market_data.py
server/config/: settings.py
server/core/: dependencies.py  health.py
server/domain/: adapter_manager.py  types.py
server/domain/adapters/: akshare_adapter.py  baostock_adapter.py  base.py  ccxt_adapter.py  crypto_adapter.py  finnhub_adapter.py  tushare_adapter.py  yahoo_adapter.py
server/domain/services/: filings_service.py  fundamental_service.py  news_service.py  simulation_service.py  technical_service.py
server/infrastructure/: minio_client.py
server/infrastructure/cache/: redis_cache.py
server/infrastructure/connections/: tushare_connection.py
server/mcp/: init_helper.py  server.py  smithery_server.py  smithery_server_minimal.py
server/mcp/tools/: asset_tools.py  chunking_tools.py  filings_tools.py  fundamental_tools.py  news_tools.py  research_tools.py  technical_tools.py  trade_tools.py
server/utils/: logger.py  openapi_generator.py
src/server/: app.py  mcp_server.py
src/server/core/: dependencies.py
src/server/domain/: adapter_manager.py
src/server/infrastructure/: minio_client.py
(+23 files in other folders)
