[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "stock_mcp"
version = "1.0.0"
description = "A powerful MCP server for financial market data, technical analysis and fundamental research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "fastmcp>=2.13.1",
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "dependency-injector>=4.48.2",
    "pandas>=2.3.3",
    "numpy>=2.3.5",
    "yfinance>=0.2.66",
    "akshare>=1.17.87",
    "tushare>=1.4.24",
    "baostock>=0.8.9",
    "ccxt>=4.5.20",
    "redis>=7.1.0",
    "aiocache>=0.12.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "minio>=7.2.4",
    "edgartools>=3.0.4",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.smithery]
server = "src.server.mcp.smithery_server:create_server"
